Fix flair spacing

--- a/assets/critical.scss
+++ b/assets/critical.scss
@@ -189,7 +189,7 @@ code {
 }
 .flair {
     display: flex;
-    gap: 0 1.5rem;
+    gap: 0.5rem 1.5rem;
     flex-wrap: wrap;
 }
 .meta {
